--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/IMG_6463.jpg" alt="" /></a>
 					<h1>David Hoang - Data Analyst  <br />
 						with a passion for learning and teaching<br />
 					</h1>
@@ -41,36 +41,27 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+							<!-- Self Serve Dashboard -->
 							<article class="posts">
-								<a href="Post 1.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="SelfserveDashboard.html" class="image fit thumb">
+									<img src="images/thumbs/SuperStore_Dashboard.jpg" 
+									width="250" `
+									height="200" alt="" /></a>
+								<h3>Profitability Self-serve Dashboard</h3>
+								<p>A low maintenance self-serve data exploration<br/>and query tool for non-technical managers.</p>
 							</article>
+
+							<!-- Propensity Modelling -->
 							<article class="posts">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href=# class="image fit thumb">
+									<img src="images/bg.jpg" 
+									width="250" 
+									height="200" alt="" /></a>
+								<h3>Propensity Model for Successful Customer<br/> Outreach</h3>
+								<p>This page is underconstruction, thank you</p>
 							</article>
-							<article class="posts">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="posts">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="posts">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="posts">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+
+							
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Back to Top</a></li>
